# shirley-raytracing-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: my_benchmark.rs
src/: argparse.rs  camera.rs  image.rs  main.rs  scenes.rs  texture.rs
src/objects/: aabb.rs  bbox_tree.rs  hittable.rs  lighting.rs  material.rs  perlin.rs  rect.rs  scene.rs  skybox.rs  sphere.rs  texture.rs
src/raytracer/: image.rs  lib.rs  render.rs
src/raytracer/bvh/: aabb.rs  bbox_tree.rs
src/raytracer/bvh/bbox_tree/: constructor.rs
src/raytracer/camera/: mod.rs
src/raytracer/core/: color.rs  fp.rs  math.rs  vec3.rs
src/raytracer/geometry/: hittable.rs  object.rs  rect.rs  sphere.rs
src/raytracer/material/: dielectric.rs  lambertian.rs  lighting.rs  material_type.rs  metal.rs  mod.rs
src/raytracer/material/perlin/: mod.rs
src/raytracer/material/texture/: checker.rs  image_texture.rs  loader.rs  mod.rs  solid.rs
src/raytracer/scene/: mod.rs
src/raytracer/skybox/: mod.rs
src/util/: color.rs  math.rs  vec3.rs
