[package]
name = "shirley-raytracing-rs"
version = "0.1.0"
authors = ["Scott Schroeder <scottschroeder@sent.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.2", features = ["derive", "cargo"]}

color-backtrace = { version = "0.5" }
pretty_env_logger = "0.4"

log = "0.4"
anyhow = "1"
rayon = "1.5"
rand = "0.8"

nalgebra = "0.31"
image = "0.24"

# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0.83"

# [profile.release]
# debug = true
