[package]
name = "shirley-raytracing-rs"
version = "0.1.0"
authors = ["Scott Schroeder <scottschroeder@sent.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = {version = "3.2", features = ["derive", "cargo"]}
color-backtrace = { version = "0.5" }
pretty_env_logger = "0.4"
log = "0.4"
anyhow = "1"
rayon = "1.5"

nalgebra = { version = "0.31", features = ["serde-serialize"]}
rand = "0.8"
oorandom = "11.1.3"

image = "0.24"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.83"

# [profile.release]
# debug = true
